--- a/homescreen.css
+++ b/homescreen.css
@@ -1,14 +1,38 @@
-body{
-  background-color: #BAB7C8 !important;
+/* #32C45B is the green to use */
+
+*.focus
+{
+  outline: 0;
+}
+body
+{
+  /* background-color: rgb(10, 10, 12) !important; */
   font-family: 'Bebas Neue', 'sans-serif';
 }
-.topnav {
-  overflow: hidden;
-  background-color: #444;
-
+.indicator {
+  background-color: #faa41a;
 }
 
-.topnav a {
+.tabs.tabs-transparent .indicator {
+  background-color: #faa41a;
+}
+
+.tabs.tabs-transparent .tab a.active {
+  font-weight: 600;
+}
+/* .topnav 
+{
+  position: -webkit-sticky; 
+  position: sticky;
+  top: 0%;
+  width: 100% !important;
+  overflow: hidden;
+  background-color: #444;
+  border-radius: 5%;
+}
+
+.topnav a 
+{
   float: left;
   color: #f2f2f2;
   text-align: center;
@@ -17,116 +41,70 @@ body{
   font-size: 17px;
 }
 
-.topnav a:hover {
+.topnav a:hover 
+{
   background-color: #ddd;
   color: black;
 }
 
-.topnav a.active {
-  background-color: #522ab0;
+.topnav a.active 
+{
+  background-color: #d44013;
   color: white;
 }
-#author{
+#author
+{
   float: right;
   font-size: 20px !important;
 }
-.topnav-right {
+.topnav-right
+{
   float: right;
+} */
+.container
+{
+  margin: 10%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
-
-.container{
-  height: 90%;
-  min-height: 10%;
-  padding: 2cm;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-gap: 0.5em;
-  box-sizing: border-box;
-  color: #b4a19d;
-  /*margin: auto;
-
-*/
-}
-.container hover{
+.container hover
+{
   height: 100%;
 }
-.Camera1{
-  width:  500px;
-  height: 450px;
-  background-color: #A62700  ;
-  grid-column: 1;
-  grid-row: 1;
-  margin: 2em;
-}
-.Camera2{
-  width:  500px;
-  height: 450px;
-  background-color: #A62700;
-  grid-column: 2;
-  grid-row: 1;
-  margin: 2em;
-}
-.Camera3{
-  width:  500px;
-  height: 450px;
-  background-color: #A62700;
-  grid-column: 3;
-  grid-row: 1;
-  margin: 2em;
-}
-.Camera4{
-  width:  500px;
-  height: 450px;
-  background-color: #A62700;
-  grid-column: 1;
-  grid-row: 2;
-  margin: 2em;
-}
-.Camera5{
-  width:  500px;
-  height: 450px;
-  background-color: #A62700;
-  grid-column: 2;
-  grid-row: 2;
-  margin: 2em;
-}
-.Camera6{
-  width:  500px;
-  height: 450px;
-  background-color: #A62700;
-  grid-column: 3 / span 2;
-  grid-row: 2;
-  margin: 2em;
-}
-.Camera7{
-  width:  500px;
-  height: 450px;
-  background-color: #A62700;
-  grid-column: 1;
-  grid-row: 3;
-  margin: 2em;
-}
-.Camera8{
-  width:  500px;
-  height: 450px;
-  background-color: #A62700;
-  grid-column: 2;
-  grid-row: 3;
-  margin: 2em;
-}
-.Camera9{
-  width:  500px;
-  height: 450px;
-  background-color: #A62700;
-  grid-column: 3;
-  grid-row: 3;
-  margin: 2em;
-}
-.cameraname{
-  float: none;
+.Camera
+{
+  margin: 3%;
+  transition: all 0.2s linear;
+  height: 250px;
+  width: 250px;;
+  background-color: rgb(177, 16, 16);
+  border-radius: 6%;
   text-align: center;
-  padding-top: 4cm;
-  font-size: 3em;
-  color: #D4AF37 ;
+  border-style: none;
+}
+.cameraname
+{
+  margin: 0 auto;
+  vertical-align: middle;
+  font-family: Calibri Light;
+  color: white;
+}
+.Camera:hover
+{
+  transition: all 0.2s linear;
+  height: 265px;
+  width: 265px;
+  border-style: solid;
+  border-color: gold;
+}
+.nav-extended
+{
+  background-color: black;
+  margin-bottom: 10%;
+}
+.brand-logo
+{
+  margin-left: 10px;;
 }
